@@ -57,6 +57,8 @@ extern const char *const localhost;	/* "127.0.0.1" */
 extern const char *const null_string;	/* "" */
 extern const char *const version_string;	/* VERSION */
 extern const char *const full_appname_string;	/* PACKAGE "/" VERSION */
+extern const char *const appname_string;	/* PACKAGE */
+extern char *visible_appname_string;
 extern const char *const w_space;	/* " \t\n\r" */
 extern const char *fdTypeStr[];
 extern const char *hier_strings[];
