@@ -1,9 +1,10 @@
 Changes to squid-2.6 (not yet released)
 
-	- --enable-default-hostsfile configure option
+	- New --enable-default-hostsfile configure option
 	- Added username info to active_requests cachemgr stats
 	- Modified squid MIB to incorporate squid.conf visible_hostname
 	- Added multi-line capability in squid.conf
+	- Added new httpd_suppress_version_string configuration directive
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
@@ -24,7 +25,7 @@ Changes to squid-2.5.STABLE13 (12 Mar 2006)
 	  (Bug #1472)
 	- [Minor] Squid crash when asyncio function counters url accessed
 	  from Cachemgr CGI (Bug #1464)
-	- [Cosmetic] Linix compile warning about prctl called with too few
+	- [Cosmetic] Linux compile warning about prctl called with too few
  	  arguments (Bug #1483)
 	- [Minor] Wrong timezone declaration for 64 bit Irix (Bug #1479)
 	- [Minor] Some 206 responses logged incorrectly (Bug #1511)
